--- a/dicegame/src/main/resources/application.properties
+++ b/dicegame/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/dice_game?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
