--- a/SpringDiceGame/pom.xml
+++ b/SpringDiceGame/pom.xml
@@ -44,10 +44,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                <dependency>
-                        <groupId>com.google.code.gson</groupId>
-                        <artifactId>gson</artifactId>
-                        <version>2.8.5</version>
+                    <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-actuator</artifactId>
                 </dependency>
 	</dependencies>
 
