--- a/SpringDiceGame/src/main/resources/application.properties
+++ b/SpringDiceGame/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #SQL connecxion
-spring.datasource.url = jdbc:mysql://localhost:3306/dice_game?serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://localhost:3306/dice_game?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/testdice?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
 ## Hibernate Properties
