--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-#SQL connecxion
-spring.datasource.url = jdbc:mysql://localhost:3306/dice_game?serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://localhost:3306/testdice?serverTimezone=UTC
+## Datos de la bd
+spring.datasource.url = jdbc:mysql://localhost:3306/newdice?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
+#Con update se va modificando la tabla a la vez que la entity
+#Con none manda sql
 spring.jpa.hibernate.ddl-auto = update
+
