--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-## Datos de la bd
+## Credetntials to access to the db. 
+## Create it utf8_general_ci type
 spring.datasource.url = jdbc:mysql://localhost:3306/newdice?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-
 # Hibernate ddl auto (create, create-drop, validate, update)
-#Con update se va modificando la tabla a la vez que la entity
-#Con none manda sql
+#Con update se va modificando la tabla a la vez que la entity>>> Desarrollo
+#Con none manda sql >>>> Ya finalizado
 spring.jpa.hibernate.ddl-auto = update
 
