--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Con none manda sql >>>> Ya finalizado
 spring.jpa.hibernate.ddl-auto = update
 
+spring.jpa.open-in-view=true
+
