--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Con update se va modificando la tabla a la vez que la entity>>> Desarrollo
 #Con none manda sql >>>> Ya finalizado
 spring.jpa.hibernate.ddl-auto = update
-
+#Setting the jpa open in view mode to jump the warning
 spring.jpa.open-in-view=true
 
