Add no name duplicity in new and modify player name

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /DiceGameNoSpring/dist/
 /SpringDiceGame/.nb-gradle/
+/HelloWorldExample/nbproject/private/
+/HelloWorldExample/build/
+/HibernateExample/nbproject/private/
+/HibernateExample/build/
+/HibernateExample/dist/
