--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ## Credetntials to access to the db. 
 ## Create it utf8_general_ci type
 #spring.datasource.url = jdbc:mysql://localhost:3306/voiddicegame?serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://localhost:3306/dicegame?serverTimezone=UTC
-spring.datasource.url = jdbc:mysql://localhost:3306/newdice?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/dicegame?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
 
