Actuator and POM job

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /HibernateExample/nbproject/private/
 /HibernateExample/build/
 /HibernateExample/dist/
+/JavaApplication54/nbproject/private/
+/JavaApplication54/build/
