--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 #Setting the jpa open in view mode to jump the warning
 spring.jpa.open-in-view=true
+#Changing the default port (8080) here
+#server.port=8090
 
