--- a/DiceGame2/src/main/resources/application.properties
+++ b/DiceGame2/src/main/resources/application.properties
@@ -17,4 +17,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=true
 #Changing the default port (8080) here
 #server.port=8090
-
+## Configuring info endpoint
+info.app.name=Spring Boot Dice Game project/It Academy
+info.app.description=A dice game to have a good time :)
+info.app.version=1.0.0
