--- a/dicegame/pom.xml
+++ b/dicegame/pom.xml
@@ -52,6 +52,14 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-actuator</artifactId>
                 </dependency> 
+                <dependency>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>httpclient</artifactId>
+                        <version>4.5.3</version>
+                        <scope>test</scope>
+                        <type>jar</type>
+                </dependency>
+                
     </dependencies>
 
 	<build>
