--- a/dicegame/pom.xml
+++ b/dicegame/pom.xml
@@ -59,6 +59,12 @@
                         <scope>test</scope>
                         <type>jar</type>
                 </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                        <version>2.1.8.RELEASE</version>
+                </dependency>
+
                 
     </dependencies>
 
