--- a/dicegame/pom.xml
+++ b/dicegame/pom.xml
@@ -43,11 +43,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-actuator</artifactId>
@@ -64,6 +59,7 @@
                         <artifactId>spring-boot-starter-thymeleaf</artifactId>
                         <version>2.1.8.RELEASE</version>
                 </dependency>
+				
 
                 
     </dependencies>
@@ -74,7 +70,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
+		
 	</build>
 
 </project>
