--- a/dicegame/pom.xml
+++ b/dicegame/pom.xml
@@ -64,9 +64,25 @@
                         <artifactId>spring-boot-starter-thymeleaf</artifactId>
                         <version>2.1.8.RELEASE</version>
                 </dependency>
-
-                
-    </dependencies>
+	 <dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.testng</groupId>
+	  <artifactId>testng</artifactId>
+	  <version>6.8.1</version>
+	  <scope>test</scope>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.google.collections</groupId>
+	  <artifactId>google-collections</artifactId>
+	  <version>1.0</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
